--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Home
+show_in_nav: false
 ---
 <p class="message">
 Just wanted to make some door pulls and throttle handles…
